--- a/hm.tex
+++ b/hm.tex
@@ -2856,7 +2856,7 @@ Any two-form can be written in terms of the basis $\{\d x^i\wedge \d x^j\}$. Due
 Given a two-form $\omega$, we can define a one-form via the \emph{contraction} (or \emph{interior product}) $\iota_X$ of $\omega$ with a fixed vector field $X$, that is, $\iota_X \omega : Y \mapsto \omega(X, Y)$. We will see in later chapters how this simplifies our lives.
 
 The last thing to know, is that we can construct two-forms out of one-forms using an operation called \emph{exterior product}.
-For what concerns us, we will only need to know that $d (\sigma_i \d x^i) = \frac{\partial \sigma_i}{\partial x^j} \d x^j \wedge \d x^i$ and that $\d (\d f) = 0$ for any $f$.
+For what concerns us, we will only need to know that $\d (\sigma_i \d x^i) = \frac{\partial \sigma_i}{\partial x^j} \d x^j \wedge \d x^i$ and that $\d (\d f) = 0$ for any $f$.
 
 \section{The Legendre Transform}
 
