Make name more clear
Signed-off-by: Marcello Seri <marcello.seri@gmail.com>

--- a/hm.tex
+++ b/hm.tex
@@ -3727,7 +3727,7 @@ To investigate in more details the connections between canonical transformations
 In the rest of this section we will show that hamiltonian flows can be associated to hamiltonian vector fields which define one--parameter groups of canonical transformations. These will allow us to define hamiltonian symmetries and state the hamiltonian version of Noether theorem.
 
 \begin{tcolorbox}
-  A vector field $X$ on the manifold $T^* M$ is called an \emph{infinitesimal symmetry} of the Poisson bracket if for any two functions $f,g \in \cC^\infty(T^*M)$ it holds
+  A vector field $X$ on the manifold $T^* M$ is called an \emph{infinitesimal symmetry of the Poisson bracket} if for any two functions $f,g \in \cC^\infty(T^*M)$ it holds
   \begin{equation}\label{eq:infsymm}
     X\big\{f,g\big\} = \big\{X f, g\big\} + \big\{f, X g\big\}.
   \end{equation}
